# RasPiLEDControl

./: .gitignore  CMakeLists.txt  README.md  changelog.txt  deploy.sh
cmake/: FindASIO.cmake  FindWS2811.cmake
script/: example.json  example.py  fireplace.json  fireplace.py  sunrise.json  sunrise.py  unicorn.json  unicorn.py  unicorn1.json  unicorn1.py  unicorn2.json  unicorn2.py
src/: CMakeLists.txt  alarm.cpp  alarm.hpp  alarm_clock.cpp  alarm_clock.hpp  animation.cpp  animation.hpp  controller.cpp  controller.cpp.autosave  controller.hpp  fadeout.cpp  fadeout.hpp  i_module.cpp  i_module.hpp  light.cpp  light.hpp  log.cpp  log.hpp  main.cpp  power.cpp  power.hpp  session.cpp  session.hpp  ws2811_control.cpp  ws2811_control.hpp
systemd/: ledctrl.service
